Move the Debugging and Demo Inputs and Buttons to a different panel section for better readability and usage. Fix overflow of body element to allow for scrolling on the webpage

--- a/public/template.css
+++ b/public/template.css
@@ -6,7 +6,7 @@ body {
 				background-color: #fff;
 				margin: 0px;
 				padding: 0px;
-				overflow: hidden;
+				overflow: auto;
 			}
 
 #containerDiv {
